@@ -250,6 +250,12 @@ Frequently Asked Questions:
  with several Slackware derived distributions such as CollegeLinux (starting
  with 2.5) and VectorLinux (starting with 5.0).
 
+ Also, Stefano Stabellini has created a PACKAGES.TXT that contains the
+ dependency information for Slackware packages without modifying the actual
+ packages themselves.  This can be used as a slapt-get source to pull the 
+ packages from official slackware.com mirrors.  Read more about it at
+ Stefano's page: http://www.stabellini.net/depslack.html
+
 
 11. What about multiple package sources, ala linuxpackages.net?
 
