@@ -264,6 +264,12 @@
  with several Slackware derived distributions such as CollegeLinux (starting
  with 2.5) and VectorLinux (starting with 5.0).
 
+ Also, Stefano Stabellini has created a PACKAGES.TXT that contains the
+ dependency information for Slackware packages without modifying the actual
+ packages themselves.  This can be used as a slapt-get source to pull the 
+ packages from official slackware.com mirrors.  Read more about it at
+ Stefano's page: <a href="http://www.stabellini.net/depslack.html">http://www.stabellini.net/depslack.html</a>
+
 
 <a name="slgFAQ11"><b>11. What about multiple package sources, ala linuxpackages.net?</b></a>
 
